--- a/config/setting.ini
+++ b/config/setting.ini
@@ -1,11 +1,11 @@
 [host]
 # 测试环境
-api_root_url = http://192.168.89.128:9999
+api_root_url = https://beauty-dev.man4fun.com/
 
 [mysql]
 # MySQL配置
-MYSQL_HOST = 192.168.89.128
+MYSQL_HOST = rm-bp12s3p1fvo275j45vo.mysql.rds.aliyuncs.com
 MYSQL_PORT = 3306
-MYSQL_USER = root
-MYSQL_PASSWD = 123456
-MYSQL_DB = flask_demo
+MYSQL_USER = beauty_user
+MYSQL_PASSWD = JO0jHR5X1VoasEn#
+MYSQL_DB = beauty_challenge
