--- a/config/setting.ini
+++ b/config/setting.ini
@@ -1,6 +1,6 @@
 [host]
 # 测试环境
-api_root_url = https://beauty-dev.man4fun.com/
+api_root_url = https://beauty-dev.man4fun.com/beauty/
 
 [mysql]
 # MySQL配置
